Add github-jobs imgs and link's urls

--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
     <section id="wellcome" class="bg-gray-100">
       <div class="flex pt-24 pb-32">
         <div class="container text-center sm:py-20 md:py-24 xl:py-32">
-          <p class="mb-2 text-lg font-normal font-playfair sm:text-2xl">
-            Hi
-          </p>
+          <p class="mb-2 text-lg font-normal font-playfair sm:text-2xl">Hi</p>
           <p class="mb-2 text-lg font-normal font-playfair sm:text-2xl">
             Welcome
           </p>
@@ -200,9 +198,6 @@
               >The Startup Owners's Manual by Steve Blank & Bob Dorf</span
             >
             [technical, pending].
-          </p>
-          <p class="mb-3 sm:text-lg">
-            I have 9 lovely Bettas and a passion for nature.
           </p>
         </div>
       </div>
@@ -300,7 +295,105 @@
                 <a
                   class="shadow-lg btn btn-blue"
                   href="https://www.trackingmyfinance.com"
+                  target="_blank"
+                  rel="noreferrer noopener"
                   >Demo</a
+                >
+              </div>
+            </div>
+            <div class="flex flex-col p-2 bg-gray-200 sm:p-4">
+              <div>
+                <h3
+                  class="mb-1 text-xl font-semibold leading-tight text-gray-800 font-playfair"
+                >
+                  Github Jobs
+                </h3>
+
+                <img
+                  class="my-3 rounded-lg shadow-xl sm:my-4 sm:w-full sm:object-cover sm:object-center lazyload"
+                  data-src="img/github-jobs.jpg"
+                  loading="lazy"
+                  data-srcset="
+                    img/github-jobs_240.jpg 240w,
+                    img/github-jobs_274.jpg 272w,
+                    img/github-jobs_400.jpg 400w,
+                    img/github-jobs_528.jpg 528w,
+                    img/github-jobs_559.jpg 559w
+                  "
+                  data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
+                  alt="personal desktop"
+                />
+                <p class="inline-block font-code">
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >ReactJS</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >React Hook Form</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Github Jobs API</span
+                  >
+
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >dayjs</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Axios</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Tailwind CSS</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Git</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >GitHub</span
+                  >
+                </p>
+              </div>
+              <p class="mt-2 text-lg text-gray-800 sm:mt-4">
+                Making API calls is key to web development. This project
+                explored the use of fetch to make API request.
+              </p>
+              <p class="mt-2 text-lg text-gray-800 sm:mt-4">
+                Also it was a way to implement the
+                <span class="font-medium">Github jobs</span> challenge published
+                by
+                <a
+                  class="font-medium text-blue-800 hover:text-blue-500 hover:underline"
+                  href="https://devchallenges.io/challenges/TtUjDt19eIHxNQ4n5jps"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >devchallenges.io</a
+                >
+                and work on my design skills.
+              </p>
+              <p class="mt-2 text-lg text-gray-800">
+                Flexbox and css combinators continue to amazing me.
+              </p>
+
+              <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
+                <a
+                  class="shadow-lg btn btn-blue"
+                  href="https://jpmti2016.github.io/github-jobs/"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >Demo</a
+                >
+                <a
+                  class="shadow-lg btn btn-gray"
+                  href="https://github.com/jpmti2016/github-jobs"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >Info</a
                 >
               </div>
             </div>
@@ -393,6 +486,8 @@
                 <a
                   class="shadow-lg btn btn-gray"
                   href="https://github.com/jpmti2016/jpmti2016.github.io"
+                  target="_blank"
+                  rel="noreferrer noopener"
                   >Info</a
                 >
               </div>
@@ -469,11 +564,15 @@
                 <a
                   class="shadow-lg btn btn-blue"
                   href="https://jpmti2016.github.io/image-gallery/"
+                  target="_blank"
+                  rel="noreferrer noopener"
                   >Demo</a
                 >
                 <a
                   class="shadow-lg btn btn-gray"
                   href="https://github.com/jpmti2016/image-gallery"
+                  target="_blank"
+                  rel="noreferrer noopener"
                   >Info</a
                 >
               </div>
@@ -541,11 +640,15 @@
                 <a
                   class="shadow-lg btn btn-blue"
                   href="https://jpmti2016.github.io/css-grid-album/"
+                  target="_blank"
+                  rel="noreferrer noopener"
                   >Demo</a
                 >
                 <a
                   class="shadow-lg btn btn-gray"
                   href="https://github.com/jpmti2016/css-grid-album"
+                  target="_blank"
+                  rel="noreferrer noopener"
                   >Info</a
                 >
               </div>
@@ -565,12 +668,16 @@
               class="block px-2 mt-1 mr-1 rounded-full hover:bg-blue-800 hover:text-gray-100"
               aria-label="personal tweeter account"
               href="https://twitter.com/jpmti2016"
+              target="_blank"
+              rel="noreferrer noopener"
               ><i class="fab fa-twitter"></i
             ></a>
             <a
               class="block px-2 mt-1 mr-1 rounded-full hover:bg-blue-800 hover:text-gray-100"
               aria-label="personal linkedin account"
               href="https://www.linkedin.com/in/yampier-medina-423641169"
+              target="_blank"
+              rel="noreferrer noopener"
             >
               <i class="fab fa-linkedin-in"></i
             ></a>
@@ -578,12 +685,16 @@
               class="block px-2 mt-1 mr-1 rounded-full hover:bg-blue-800 hover:text-gray-100"
               aria-label="personal github account"
               href="https://github.com/jpmti2016"
+              target="_blank"
+              rel="noreferrer noopener"
               ><i class="fab fa-github-square"></i
             ></a>
             <a
               class="block px-2 mt-1 mr-1 rounded-full hover:bg-blue-800 hover:text-gray-100"
               aria-label="personal email account"
               href="mailto:jpmti2016@gmail.com"
+              target="_blank"
+              rel="noreferrer noopener"
             >
               <i class="fas fa-at"></i
             ></a>
