Update about info

--- a/index.html
+++ b/index.html
@@ -185,19 +185,34 @@
             I speak English (continuously improving) and Spanish (native).
           </p>
           <p class="mb-3 sm:text-lg">
-            When I am not coding I like to read. Recent readings:
+            When I am not coding I like to read or to learn something new
+            -sometimes revisiting or upgrading the level.
           </p>
           <p class="mb-3 sm:text-lg">
-            <span class="font-medium">The Choice by Edith Eva Eger</span>
-            [non-technical, completed],
-            <span class="font-medium">Composing Software by Eric Elliot.</span>
-            [technical, in progress],
-            <span class="font-medium">Fluent Forever by Gabriel Wyner</span>
-            [non-technical, in progress] and
+            Recent learnings (... in the path to Pro):
+          </p>
+          <p class="mb-3 sm:text-lg">
+            <span class="font-medium"
+              >Epic React workshops by Kent C. Dodds</span
+            >
+            [technical, in progress] and
+            <span class="font-medium">Testing JavaScript by Kent C. Dodds</span>
+            [technical, pending]
+          </p>
+          <p class="mb-3 sm:text-lg">Recent readings:</p>
+          <p class="mb-3 sm:text-lg">
+            <span class="font-medium">Composing Software by Eric Elliot</span>
+            [technical, in progress] and
             <span class="font-medium"
               >The Startup Owners's Manual by Steve Blank & Bob Dorf</span
             >
             [technical, pending].
+          </p>
+          <p class="mb-3 sm:text-lg">
+            <span class="font-medium">The Choice by Edith Eva Eger</span>
+            [non-technical, completed] and
+            <span class="font-medium">Fluent Forever by Gabriel Wyner</span>
+            [non-technical, in progress].
           </p>
         </div>
       </div>
@@ -298,6 +313,13 @@
                   target="_blank"
                   rel="noreferrer noopener"
                   >Demo</a
+                >
+                <a
+                  class="shadow-lg btn btn-gray"
+                  href="https://github.com/jpmti2016/trackingmyfinance"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >Info</a
                 >
               </div>
             </div>
